# data-processing

./: .gitignore  README  README.md  pyproject.toml  requirements.txt
src/bpe/: README.md  download_datasets.py  evaluate_tokenizer.py  test_tokenizer_quick.py  train_vietnamese_bpe.py  vietnamese_word_tokenizer.py
src/bpe/bpeasy/: __init__.py  convert.py  tokenizer.py
src/gpt_token/: README.md  evaluate_tokenizer.py  example_usage.py  format_bert_tokenizer.py  train_tokenizer.py
src/pipeline/: run_full_pipeline.py  test_pipeline.py
src/sampling/: chunk_tokenized_mds.py  random_sample_by_length.py
src/splitting/: merge_mds_subsets.py
src/tokenization/: tokenize_mds_subsets.py
src/utils/: __init__.py  mds_helpers.py  plot_length_histogram.py  read_chunk_samples.py  upload_to_hf.py
