[project]
name = "data-processing"
version = "0.1.0"
description = "Data processing utilities"
authors = [
    { name = "Quang-Duy Tran", email = "tranquangduy1810@gmail.com" }
]
requires-python = ">=3.10"

dependencies = [
    "mosaicml[nlp,wandb]==0.32.1",
    "mosaicml-streaming==0.7.6",
    "transformers==4.40.2",
    "python-dotenv==1.0.0",
    "huggingface-hub>=0.20.0",
    "tqdm==4.67.1",
    "tiktoken>=0.4.0",
    "bpeasy>=0.1.6",
    "datatrove>=0.2.0",
    "datasets>=2.14.0",
    "sentencepiece>=0.1.99",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "spacy>=3.7.0"
]

[project.urls]
Homepage = "https://github.com/QuangDiy/data-processing"
Repository = "https://github.com/QuangDiy/data-processing"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = []
